fix: text alignment in code

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -2,3 +2,7 @@
 @import "@nuxt/ui";
 
 @source "../../../content/**/*.md";
+
+pre {
+  @apply text-left
+}
